--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   data_connection_checker: ^0.3.4
   dartz: ^0.10.1
   http: ^0.13.4
+  permission_handler: ^10.0.0
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/coding.svg
+    - assets/Login_Design.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
